--- a/Te quiero Silvia.html
+++ b/Te quiero Silvia.html
@@ -4,8 +4,8 @@
    <meta charset="utf-8">
    <meta name="author" content=" Alhan y Silvia">
    <meta name="description" content="amor,te quiero,pasion,amar"
-   <title><p title="Y Alhan Kamphos">SILVIA ELENA LÓPEZ CASTRO</title>
- </head>
+   <title><p title="Y Alhan Kamphos">SILVIA ELENA LÓPEZ CASTRO <title>
+ <head> 
  <body>
    <em>
    <h1><strong><em>Hola,mi amor :*</em></strong><br> me divierto mucho mientras doy mis primeros pasos codificando, pienso mucho en ti,y escucho musica.</h1>
@@ -19,15 +19,16 @@
   </p></em>
   <p>
 
-    <strong><em><p title="Te ">Q
+    <strong><em><p title="Te ">
+     Q
      U
      E
      D
      A
      T
      E
-   </strong>
- </p>
+   <strong>
+ <p>
  <p>
 
   <strong><p title="Quiero">C
@@ -42,10 +43,10 @@
    <p>
      <strong><p title="Mucho">
      MI AMOR..!!
-   </strong></em>
-   </P>
+   </strong><em>
+   <P>
    <P>
      Aprendere mejor, codificando para TI..!!!
-   </p>
- </body>
-</html>
+   <p>
+ <body>
+<html>
